# ray-tracer-challenge

./: .gitmodules  CMakeLists.txt  install-cucumber.sh  profile.sh
cmake/modules/: FindCucumberCpp.cmake
features/: CMakeLists.txt  runner.sh  tuples.feature
features/step_definitions/: runner.cpp
src/: camera.h  canvas.h  intersection.h  light.h  main.cpp  material.h  matrix.h  object.h  plane.h  ray.h  sphere.h  transform.h  tuple.h  util.h  world.h
test/: CMakeLists.txt  camera.cpp  canvas.cpp  intersection.cpp  light.cpp  material.cpp  matrix.cpp  object.cpp  plane.cpp  ray.cpp  sphere.cpp  transform.cpp  tuples.cpp  world.cpp
